--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=83e7a924e6ff97ba2b15",
+    "/css/app.css": "/css/app.css?id=b0cd0faf04bcf3fefdb9"
 }
